# pygeo2d

./: .buildinfo  .gitignore  LICENSE  README.md  circle.html  example.html  index.html  line.html  objects.inv  point.html  pyproject.toml  searchindex.js  utility.html
.doctrees/: circle.doctree  environment.pickle  example.doctree  index.doctree  line.doctree  point.doctree  utility.doctree
_sources/: circle.rst.txt  utility.rst.txt
docs/: conf.py  example.rst  line.rst
docs/_build/doctrees/: circle.doctree  environment.pickle  example.doctree  index.doctree  line.doctree  point.doctree  utility.doctree
docs/_build/html/: .buildinfo  circle.html  example.html  genindex.html  index.html  line.html  point.html  search.html  searchindex.js  utility.html
docs/_build/html/_sources/: circle.rst.txt  index.rst.txt  line.rst.txt  point.rst.txt
src/pygeo2d/: __init__.py  circle.py  line.py  point.py  util.py
tests/: unit_test.py
